Fix broken inventory page [SCI-8690]
- Stretch the datatable body to take all of the available space.
- Reload the datatable upon item assignment to task.

--- a/app/assets/stylesheets/repositories.scss
+++ b/app/assets/stylesheets/repositories.scss
@@ -116,6 +116,8 @@
     }
 
     .dataTables_scrollBody {
+      flex-grow: 1;
+
       thead th#checkbox {
         opacity: 0;
       }
